2006-09-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-number-editor.c:
	(hildon_number_editor_validate_value): Modified the condition
	for checking if the inputted value is 0 when range minimun is
	positive. Fixes #NB30734.

2006-09-21  Fernando Herrera  <fernando.herrera-de-las-heras@nokia.com>

	* hildon-widgets/hildon-get-password-dialog.c:
	(hildon_get_password_get_property): Fix "numbers-only" getter.
	Fix #MB769

2006-09-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets-plugins/hildon-color-chooser-dialog-hsv.c: Reverting
	the hex -> color func (hsv not supported by the parse function). 
	Fixing a bug where last character is not appended to the color ->
	ascii conversion. Fixes #NB40061.

2006-09-20  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-get-password-dialog.c: Fixing the way input
	method is set. Fixes #NB37467. 

	* hildon-widgets/hildon-name-password-dialog.c: Fixing the way the
	password entry is being accessed. Fixes #MB767. Using a patch by
	Lorenzo Gil Sanchez.

2006-09-19  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-date-editor.c:
	(hildon_date_editor_keypress): On left or right key pressed, it
	first takes in consideration the current cursor position inside
	the entries. If it's in an edge, focus moves to the widget on the
	right or left. Fixes #NB40770.

2006-09-19  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets-plugins/hildon-color-chooser-dialog-hsv.c: Agh...
	correcting silly mistake.  

2006-09-19  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets-plugins/hildon-color-chooser-dialog-hsv.c:
	Replacing a custom hex -> color with a stock gdk func. 

	* hildon-widgets/hildon-caption.c:
	Ups... a momentary lapse of reason.

2006-09-19  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-time-editor.c: